20250730 后端开发 图片管理页面开发进度3/4

--- a/pom.xml
+++ b/pom.xml
@@ -61,7 +61,18 @@
             <groupId>com.baomidou</groupId>
             <artifactId>mybatis-plus-jsqlparser-4.9</artifactId>
         </dependency>
-
+        <!-- 腾讯云对象存储 依赖 -->
+        <dependency>
+            <groupId>com.qcloud</groupId>
+            <artifactId>cos_api</artifactId>
+            <version>5.6.227</version>
+        </dependency>
+        <!-- Java EXIF 读取工具 用于读取图片的原始信息 依赖 -->
+        <dependency>
+            <groupId>com.drewnoakes</groupId>
+            <artifactId>metadata-extractor</artifactId>
+            <version>2.18.0</version>
+        </dependency>
 
 
 
