--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,6 +3,10 @@ spring:
     name: picture-backend
   profiles:
     active: local
+  servlet:
+    multipart:
+      max-file-size: 20MB     # 单个文件最大大小
+      max-request-size: 20MB  # 总请求大小
 mybatis:
   mapper-locations: classpath:mappers/*xml
   type-aliases-package: com.lushihao.picturebackend.mybatis.entity
