20250808 后端开发 图片协同编辑功能实现 finished： - 结合WebSocket实现协同工作流程 - 结合Disruptor解决并发问题 fixed： - 修复无法从SaToken 中获取登录用户身份信息 todo： - 最受欢迎图片分析

--- a/pom.xml
+++ b/pom.xml
@@ -118,11 +118,17 @@
             <artifactId>shardingsphere-jdbc-core-spring-boot-starter</artifactId>
             <version>5.2.0</version>
         </dependency>
-
-
-
-
-
+        <!-- websocket -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-websocket</artifactId>
+        </dependency>
+        <!-- 高性能无锁队列 -->
+        <dependency>
+            <groupId>com.lmax</groupId>
+            <artifactId>disruptor</artifactId>
+            <version>3.4.2</version>
+        </dependency>
 
 
     </dependencies>
